Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
       body{
         background: #00b3e6;
       }
+      div{
+        width: 700px;
+        margin: auto;
+        font-family: "Helvetica Neue";
+        background: white;
+      }
     </style>
   </head>
 
