--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         margin: auto;
         font-family: "Helvetica Neue";
         background: white;
+        padding: 30px;
       }
     </style>
   </head>
